<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="calendar_sunday">일</string>
    <string name="calendar_monday">월</string>
    <string name="calendar_tuesday">화</string>
    <string name="calendar_wednesday">수</string>
    <string name="calendar_thursday">목</string>
    <string name="calendar_friday">금</string>
    <string name="calendar_saturday">토</string>

    <string name="event_more">+ %d</string>
</resources>