<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_sunday"
                android:textColor="@color/calendar_accent"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_monday"
                android:textColor="@color/calendar_normal"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_tuesday"
                android:textColor="@color/calendar_normal"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_wednesday"
                android:textColor="@color/calendar_normal"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_thursday"
                android:textColor="@color/calendar_normal"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_friday"
                android:textColor="@color/calendar_normal"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textview_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/calendar_saturday"
                android:textColor="@color/calendar_accent"
                android:textSize="14dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_calender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/item_calendar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>